Adding SVGs & styles

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <div class="navItem navHome">
           <a href="#intro" class="link vee">V</a>
           <a href="#intro" class="link jay">J</a>
+
+          <!-- start of svg -->
+          <svg version="1.1" id="svgNav" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+          <line fill="none" stroke="#FF9163" stroke-width="14" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
+          </svg>
+          <!-- end of svg -->
+
         </div>
         <div class="navItem navAbout">
           <a href="#about" class="link">About</a>
@@ -43,21 +50,21 @@
           <!-- <rect x="2" y="2" fill="#FFFFFF" width="1200" height="360"/> -->
 
           <!-- zigzag path -->
-          <path fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" d="M2,2h1200L2,302l300,60H2"/>
+          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" d="M2,2h1200L2,302l300,60H2"/>
           <!-- right border -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="1202" y2="2"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="1202" y2="2"/>
           <!-- bottom border nav -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="302" y2="362"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="302" y2="362"/>
           <!-- top border nav -->
-          <path fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" d="M1202,302H2"/>
+          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" d="M1202,302H2"/>
           <!-- nav border right -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="902" y1="362" x2="902" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="902" y1="362" x2="902" y2="302"/>
           <!-- nav border middle -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="602" y1="362" x2="602" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="602" y1="362" x2="602" y2="302"/>
           <!-- nav border left -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="302" y1="362" x2="302" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="302" y1="362" x2="302" y2="302"/>
           <!-- left border -->
-          <line fill="none" stroke="#FF9163" stroke-width="3" stroke-linejoin="bevel" stroke-miterlimit="10" x1="2" y1="2" x2="2" y2="362"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="2" y1="2" x2="2" y2="362"/>
 
           <!-- name text -->
           <text class="svgIntroText svgIntroText-name svgIntroText-nameFirst" transform="matrix(1 0 0 1 22 67.9702)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="60">VESNA</text>
@@ -83,12 +90,26 @@
           </div> <!-- /.aboutText -->
           <div class="aboutTitle">
             <h2>About</h2>
+
+            <!-- start of svg -->
+            <svg version="1.1" id="svgAbout" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+            <line fill="none" stroke="#D0DD41" stroke-width="4" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
+            </svg>
+            <!-- end of svg -->
+
           </div> <!-- /.aboutTitle -->
         </div> <!-- /.wrapperAboutMain -->
 
         <div class="wrapperSkills">
           <div class="skillsTitle">
             <h2>Skills</h2>
+
+            <!-- start of svg -->
+            <svg version="1.1" id="svgSkills" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+            <line fill="none" stroke="#D0DD41" stroke-width="6" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
+            </svg>
+            <!-- end of svg -->
+
           </div> <!-- /.skillsTitle -->
           <div class="skillsText">
             <div class="skillsTextTitles">
@@ -128,7 +149,7 @@
 
     <section id="work" class="sectionWork">
 
-      <div class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork1 hide">
+      <div id="work1" class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork1 hide">
         <div class="workImg workImg1">
           <figure>
             <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for Pauline's Dinette website">
@@ -145,6 +166,13 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>01</p>
+
+            <!-- start of svg -->
+            <svg version="1.1" id="svgWork1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+            <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
+            </svg>
+            <!-- end of svg -->
+
           </div> <!-- /.workTitleMain -->
           <div class="workTitleItem workTitleType">
             <h4>WordPress Theme</h4>
@@ -162,13 +190,13 @@
             </ul>
           </div> <!-- /.workTitleSkills -->
           <div class="workTitleItem workTitleButton">
-            <a href="http://vesnajocic.com/CustomWPTheme/" target="blank">View Live</a>
+            <a href="#work1">View Live</a>
           </div> <!-- /.workTitleButton -->
 
         </div> <!-- /.workTitle1 -->
       </div> <!-- /.wrapperWork1 -->
 
-      <div class="wrapperOuter wrapperWork wrapperWorkEven wrapperWork2 hide">
+      <div id="work2" class="wrapperOuter wrapperWork wrapperWorkEven wrapperWork2 hide">
         <div class="workImg workImg2">
           <figure>
             <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Celiac Menu Planner website">
@@ -185,6 +213,13 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>02</p>
+
+            <!-- start of svg -->
+            <svg version="1.1" id="svgWork2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+            <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
+            </svg>
+            <!-- end of svg -->
+
           </div> <!-- /.workTitleMain -->
           <div class="workTitleItem workTitleType">
             <h4>API Application</h4>
@@ -203,13 +238,13 @@
             </ul>
           </div> <!-- /.workTitleSkills -->
           <div class="workTitleItem workTitleButton">
-            <a href="http://vesnajocic.com/CustomWPTheme/" target="blank">View Live</a>
+            <a href="#work2">View Live</a>
           </div> <!-- /.workTitleButton -->
 
         </div> <!-- /.workTitle2 -->
       </div> <!-- /.wrapperWork2 -->
 
-      <div class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork3 hide">
+      <div id="work3" class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork3 hide">
         <div class="workImg workImg3">
           <figure>
             <img src="images/frame-laptop.png" alt="Image of laptop screen and mobile phone screen showing responsive design for the Hai&amp;Bay Law Practice website">
@@ -226,6 +261,13 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>03</p>
+
+            <!-- start of svg -->
+            <svg version="1.1" id="svgWork3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+            <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
+            </svg>
+            <!-- end of svg -->
+
           </div> <!-- /.workTitleMain -->
           <div class="workTitleItem workTitleType">
             <h4>PSD Conversion</h4>
@@ -240,7 +282,7 @@
             </ul>
           </div> <!-- /.workTitleSkills -->
           <div class="workTitleItem workTitleButton">
-            <a href="http://vesnajocic.com/CustomWPTheme/" target="blank">View Live</a>
+            <a href="#work3">View Live</a>
           </div> <!-- /.workTitleButton -->
 
         </div> <!-- /.workTitle3 -->
@@ -252,6 +294,13 @@
 
         <div class="contactTitle">
           <h2>Contact</h2>
+
+          <!-- start of svg -->
+          <svg version="1.1" id="svgContact" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
+          <line fill="none" stroke="#D0DD41" stroke-width="6" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
+          </svg>
+          <!-- end of svg -->
+
         </div> <!-- /.contactTitle -->
         <div class="contactText">
           <p>Interested in discussing future projects? Curious to know more about how I can contribute to your team? Or just looking to say hello? Feel free to reach out through any (or all) of the following channels...</p>
