Fixing smooth scrool & adding responsiveness

--- a/index.html
+++ b/index.html
@@ -103,22 +103,19 @@
         <div class="wrapperSkills">
           <div class="skillsTitle">
             <h2>Skills</h2>
-
             <!-- start of svg -->
             <svg version="1.1" id="svgSkills" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
             <line fill="none" stroke="#D0DD41" stroke-width="6" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
             </svg>
             <!-- end of svg -->
-
           </div> <!-- /.skillsTitle -->
+
           <div class="skillsText">
-            <div class="skillsTextTitles">
-              <h3>Dev</h3>
-              <h3>Workflow</h3>
-              <h3>Design</h3>
-            </div> <!-- /.skillsTextTitles -->
-            <div class="skillsTextItems">
-              <ul class="dev">
+            <div class="skillsTextItem skillsTextItem-dev">
+              <div class="skillsTextItemTitle skillsTextItemTitle-dev">
+                <h3>Dev</h3>
+              </div> <!-- /.skillsTextItemTitle-dev -->
+              <ul class="skillsTextItemList skillsTextItemList-dev">
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>Sass</li>
@@ -127,6 +124,11 @@
                 <li>API</li>
                 <li>WordPress</li>
               </ul>
+            </div> <!-- /.skillsTextItem-dev -->
+            <div class="skillsTextItem skillsTextItem-workflow">
+              <div class="skillsTextItemTitle skillsTextItemTitle-workflow">  
+                <h3>Workflow</h3>
+              </div> <!-- /.skillsTextItem-workflow -->
               <ul class="workflow">
                 <li>Command Line</li>
                 <li>Git</li>
@@ -134,6 +136,11 @@
                 <li>Gulp</li>
                 <li>Pair Programming</li>
               </ul>
+            </div> <!-- /.skillsTextItem-workflow -->
+            <div class="skillsTextItem skillsTextItem-design">
+              <div class="skillsTextItemTitle skillsTextItemTitle-design"> 
+                <h3>Design</h3>
+              </div> <!-- /.skillsTextItem-workflow --> 
               <ul class="design">
                 <li>UI Design</li>
                 <li>Visual Identities</li>
@@ -312,6 +319,7 @@
               Email
               <!-- hi@vesnajocic.com -->
             </a>
+            <div class="contactItemBg"></div>
           </div> <!-- /.contactItems1 -->
           <div class="contactItem contactItem2">
             <a href="https://twitter.com/vesjocic" target="blank">
@@ -319,6 +327,7 @@
               Twitter
               <!-- @vesjocic -->
             </a>
+            <div class="contactItemBg"></div>
           </div> <!-- /.contactItems2 -->
           <div class="contactItem contactItem3">
             <a href="https://ca.linkedin.com/in/vesjocic" target="blank">
@@ -326,6 +335,7 @@
               LinkedIn
               <!-- vesjocic -->
             </a>
+            <div class="contactItemBg"></div>
           </div> <!-- /.contactItems3 -->
         </div> <!-- /.contactItems -->
 
