Updating styles & js

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
               <div class="skillsTextItemTitle skillsTextItemTitle-workflow">  
                 <h3>Workflow</h3>
               </div> <!-- /.skillsTextItem-workflow -->
-              <ul class="workflow">
+              <ul class="skillsTextItemList skillsTextItemList-workflow">
                 <li>Command Line</li>
                 <li>Git</li>
                 <li>Github</li>
@@ -141,7 +141,7 @@
               <div class="skillsTextItemTitle skillsTextItemTitle-design"> 
                 <h3>Design</h3>
               </div> <!-- /.skillsTextItem-workflow --> 
-              <ul class="design">
+              <ul class="skillsTextItemList skillsTextItemList-design">
                 <li>UI Design</li>
                 <li>Visual Identities</li>
                 <li>Print</li>
@@ -310,14 +310,13 @@
 
         </div> <!-- /.contactTitle -->
         <div class="contactText">
-          <p>Interested in discussing future projects? Curious to know more about how I can contribute to your team? Or just looking to say hello? Feel free to reach out through any (or all) of the following channels...</p>
+          <p>Interested in discussing future projects? Curious to know more about how I can contribute to your team? Or just looking to say hello? Feel free to reach out through any (or all) channels!</p>
         </div> <!-- /.contactText -->
         <div class="wrapperContactItems">
           <div class="contactItem contactItem1">
             <a href="mailto:hi@vesnajocic.com" target="blank">
               <i class="fa fa-envelope-o"></i>
               Email
-              <!-- hi@vesnajocic.com -->
             </a>
             <div class="contactItemBg"></div>
           </div> <!-- /.contactItems1 -->
@@ -325,7 +324,6 @@
             <a href="https://twitter.com/vesjocic" target="blank">
               <i class="fa fa-twitter"></i>
               Twitter
-              <!-- @vesjocic -->
             </a>
             <div class="contactItemBg"></div>
           </div> <!-- /.contactItems2 -->
@@ -333,7 +331,6 @@
             <a href="https://ca.linkedin.com/in/vesjocic" target="blank">
               <i class="fa fa-linkedin"></i>
               LinkedIn
-              <!-- vesjocic -->
             </a>
             <div class="contactItemBg"></div>
           </div> <!-- /.contactItems3 -->
@@ -343,7 +340,7 @@
     </section> <!-- /.sectionContact-->
 
     <footer>
-      <p>&copy; Vesna Jocic 2015. All Rights Reserved.</p>
+      <p>&copy;2015 Vesna Jocic. All Rights Reserved.</p>
     </footer>
 
     <!-- loading jquery -->
