Updating media queries

--- a/index.html
+++ b/index.html
@@ -173,35 +173,40 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>01</p>
-
             <!-- start of svg -->
             <svg version="1.1" id="svgWork1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
             <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
             </svg>
             <!-- end of svg -->
-
           </div> <!-- /.workTitleMain -->
-          <div class="workTitleItem workTitleType">
-            <h4>WordPress Theme</h4>
-          </div> <!-- /.workTitleType -->
-          <div class="workTitleItem workTitleSkills">
-            <ul>
-              <li>WordPress</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>Sass</li>
-              <li>Git</li>
-              <li>Github</li>
-              <li>Gulp</li>
-              <li>UI Design</li>
-            </ul>
-          </div> <!-- /.workTitleSkills -->
-          <div class="workTitleItem workTitleButton">
-            <a href="#work1">View Live</a>
-          </div> <!-- /.workTitleButton -->
+
+          <div class="workTitleSub">
+            <div class="workTitleItem workTitleType">
+              <h4>WordPress Theme</h4>
+            </div> <!-- /.workTitleType -->
+            <div class="workTitleItem workTitleSkills">
+              <ul>
+                <li>WordPress</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Sass</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>Gulp</li>
+                <li>UI Design</li>
+              </ul>
+            </div> <!-- /.workTitleSkills -->
+            <div class="workTitleItem workTitleButton">
+              <a href="#work1">View Live</a>
+            </div> <!-- /.workTitleButton -->
+          </div> <!-- /.workTitleSub -->
 
         </div> <!-- /.workTitle1 -->
       </div> <!-- /.wrapperWork1 -->
+
+      <div class="wrapperOuter workExtraButton">
+        <a href="#work1">View Live</a>
+      </div> <!-- /.workTitleButton -->
 
       <div id="work2" class="wrapperOuter wrapperWork wrapperWorkEven wrapperWork2 hide">
         <div class="workImg workImg2">
@@ -220,36 +225,41 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>02</p>
-
             <!-- start of svg -->
             <svg version="1.1" id="svgWork2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
             <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="0" y1="500" x2="500" y2="0"/>
             </svg>
             <!-- end of svg -->
-
           </div> <!-- /.workTitleMain -->
-          <div class="workTitleItem workTitleType">
-            <h4>API Application</h4>
-          </div> <!-- /.workTitleType -->
-          <div class="workTitleItem workTitleSkills">
-            <ul>
-              <li>API</li>
-              <li>JavaScript</li>
-              <li>jQuery</li>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>Sass</li>
-              <li>Git</li>
-              <li>Github</li>
-              <li>UI Design</li>
-            </ul>
-          </div> <!-- /.workTitleSkills -->
-          <div class="workTitleItem workTitleButton">
-            <a href="#work2">View Live</a>
-          </div> <!-- /.workTitleButton -->
+
+          <div class="workTitleSub">
+            <div class="workTitleItem workTitleType">
+              <h4>API Application</h4>
+            </div> <!-- /.workTitleType -->
+            <div class="workTitleItem workTitleSkills">
+              <ul>
+                <li>API</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Sass</li>
+                <li>Git</li>
+                <li>Github</li>
+                <li>UI Design</li>
+              </ul>
+            </div> <!-- /.workTitleSkills -->
+            <div class="workTitleItem workTitleButton">
+              <a href="#work2">View Live</a>
+            </div> <!-- /.workTitleButton -->
+          </div> <!-- /.workTitleSub -->
 
         </div> <!-- /.workTitle2 -->
       </div> <!-- /.wrapperWork2 -->
+
+      <div class="wrapperOuter workExtraButton">
+        <a href="#work2">View Live</a>
+      </div> <!-- /.workTitleButton -->
 
       <div id="work3" class="wrapperOuter wrapperWork wrapperWorkOdd wrapperWork3 hide">
         <div class="workImg workImg3">
@@ -268,32 +278,38 @@
           <div class="workTitleItem workTitleMain">
             <h2>Work</h2>
             <p>03</p>
-
             <!-- start of svg -->
             <svg version="1.1" id="svgWork3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 500 500" preserveAspectRatio="none" enable-background="new 0 0 500 500" xml:space="preserve">
             <line fill="none" stroke="#FF9163" stroke-width="8" stroke-miterlimit="10" x1="500" y1="500" x2="0" y2="0"/>
             </svg>
             <!-- end of svg -->
-
           </div> <!-- /.workTitleMain -->
-          <div class="workTitleItem workTitleType">
-            <h4>PSD Conversion</h4>
-          </div> <!-- /.workTitleType -->
-          <div class="workTitleItem workTitleSkills">
-            <ul>
-              <li>HTML5</li>
-              <li>CSS3</li>
-              <li>Sass</li>
-              <li>JavaScript</li>
-              <li>jQuery</li>
-            </ul>
-          </div> <!-- /.workTitleSkills -->
-          <div class="workTitleItem workTitleButton">
-            <a href="#work3">View Live</a>
-          </div> <!-- /.workTitleButton -->
+
+          <div class="workTitleSub">
+            <div class="workTitleItem workTitleType">
+              <h4>PSD Conversion</h4>
+            </div> <!-- /.workTitleType -->
+            <div class="workTitleItem workTitleSkills">
+              <ul>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Sass</li>
+                <li>JavaScript</li>
+                <li>jQuery</li>
+              </ul>
+            </div> <!-- /.workTitleSkills -->
+            <div class="workTitleItem workTitleButton">
+              <a href="#work3">View Live</a>
+            </div> <!-- /.workTitleButton -->
+          </div> <!-- /.workTitleSub -->
 
         </div> <!-- /.workTitle3 -->
       </div> <!-- /.wrapperWork3 -->
+
+      <div class="wrapperOuter workExtraButton">
+        <a href="#work3">View Live</a>
+      </div> <!-- /.workTitleButton -->
+
     </section> <!-- /.sectionWork -->
 
     <section id="contact" class="sectionContact">
