--- a/index.html
+++ b/index.html
@@ -2,10 +2,36 @@
 <html lang="en">
   <head>
 
+    <!-- meta tags & title -->
     <meta charset="UTF-8">
     <title>Vesna Jocic | Front-End Developer + Designer</title>
+    <meta name="keywords" content="Vesna Jocic, Vesna, Jocic, Front-End Developer, Front-End Development, Web Developer, Web Development, Toronto Web Developer, Design, Designer, Graphic Designer, Toronto Designer, Toronto Graphic Designer">
+    <meta name="description" content="Front-end web developer and designer who loves to code and create in equal measure. If I had to choose between my console and my artboard... I wouldn't.">
+    <meta name="author" content="Vesna Jocic">
 
-    <!-- loading fonts -->
+    <!-- OG meta tags -->
+    <meta property="og:title" content="Vesna Jocic | Front-End Developer + Designer">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="http://vesnajocic.com">
+    <meta property="og:image" content="http://www.vesnajocic.com/og-image.jpg"> <!-- min 200x200px -->
+    <meta property="og:site_name" content="Vesna Jocic | Front-End Developer + Designer">
+    <meta property="og:description" content="Front-end web developer and designer who loves to code and create in equal measure. If I had to choose between my console and my artboard... I wouldn't.">
+
+    <!-- twitter cards -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="http://vesnajocic.com">
+    <meta name="twitter:title" content="Vesna Jocic | Front-End Developer + Designer">
+    <meta name="twitter:description" content="Front-end web developer and designer who loves to code and create in equal measure. If I had to choose between my console and my artboard... I wouldn't.">
+    <meta name="twitter:creator" content="@vesjocic">
+    <meta name="twitter:image" content="http://www.vesnajocic.com/og-image.jpg"> <!-- min 120x120px -->
+
+    <!-- responsive -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
+
+    <!-- loading fonts & font awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
@@ -44,38 +70,64 @@
       <div class="wrapperOuter wrapperIntro">
 
         <!-- start of svg -->
-        <svg version="1.1" id="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 1204 364" enable-background="new 0 0 1204 364" xml:space="preserve">
-
-          <!-- background -->
-          <!-- <rect x="2" y="2" fill="#FFFFFF" width="1200" height="360"/> -->
+        <svg version="1.1" id="svgIntroLg" class="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 1204 364" enable-background="new 0 0 1204 364" xml:space="preserve">
 
           <!-- zigzag path -->
-          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" d="M2,2h1200L2,302l300,60H2"/>
+          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M2,2h1200L2,302l300,60H2"/>
           <!-- right border -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="1202" y2="2"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="1202" y2="2"/>
           <!-- bottom border nav -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="1202" y1="362" x2="302" y2="362"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="1202" y1="362" x2="302" y2="362"/>
           <!-- top border nav -->
-          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" d="M1202,302H2"/>
+          <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  d="M1202,302H2"/>
           <!-- nav border right -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="902" y1="362" x2="902" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="902" y1="362" x2="902" y2="302"/>
           <!-- nav border middle -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="602" y1="362" x2="602" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="602" y1="362" x2="602" y2="302"/>
           <!-- nav border left -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="302" y1="362" x2="302" y2="302"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="302" y1="362" x2="302" y2="302"/>
           <!-- left border -->
-          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" x1="2" y1="2" x2="2" y2="362"/>
+          <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke"  x1="2" y1="2" x2="2" y2="362"/>
 
           <!-- name text -->
-          <text class="svgIntroText svgIntroText-name svgIntroText-nameFirst" transform="matrix(1 0 0 1 22 67.9702)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="60">VESNA</text>
-          <text class="svgIntroText svgIntroText-name svgIntroText-nameLast" transform="matrix(1 0 0 1 988.502 282)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="60">JOCIC</text>
+          <!-- <text class="svgIntroText svgIntroText-name svgIntroText-nameFirst" transform="matrix(1 0 0 1 22 67.9702)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="6rem">VESNA</text>
+          <text class="svgIntroText svgIntroText-name svgIntroText-nameLast" transform="matrix(1 0 0 1 988.502 282)" fill="#6EB79E" font-family="'Montserrat-Regular'" font-size="6rem">JOCIC</text> -->
 
           <!-- nav text -->
-          <text class="svgIntroText svgIntroText-nav svgIntroText-navAbout" transform="matrix(1 0 0 1 495.5811 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="24"><a class="linkX" xlink:href="#about">ABOUT</a></text>
-          <text class="svgIntroText svgIntroText-nav svgIntroText-navWork" transform="matrix(1 0 0 1 803.9805 348)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="24"><a class="linkX" xlink:href="#work">WORK</a></text>
-          <text class="svgIntroText svgIntroText-nav svgIntroText-navContact" transform="matrix(1 0 0 1 1057.9688 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="24"><a class="linkX" xlink:href="#contact">CONTACT</a></text>
+          <!-- <text class="svgIntroText svgIntroText-nav svgIntroText-navAbout" transform="matrix(1 0 0 1 495.5811 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#about">ABOUT</a></text>
+          <text class="svgIntroText svgIntroText-nav svgIntroText-navWork" transform="matrix(1 0 0 1 803.9805 348)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#work">WORK</a></text>
+          <text class="svgIntroText svgIntroText-nav svgIntroText-navContact" transform="matrix(1 0 0 1 1057.9688 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#contact">CONTACT</a></text> -->
           
-        </svg> <!-- /. end of svg -->
+        </svg> <!-- end of svg -->
+
+        <div class="svgOverlay" style=" ">
+
+          <div class="svgHeader" style=" ">
+            <div class="svgHeaderText svgHeaderText-vesna">
+              <h1>Vesna</h1>
+            </div>
+            <div class="svgHeaderText svgHeaderText-jocic">
+              <h1>Jocic</h1>
+            </div>
+          </div> <!-- /.svgHeader -->
+
+          <div class="svgNav" style=" ">
+            <div class="svgNavItem">
+              <p>&nbsp;</p>
+            </div>
+            <div class="svgNavItem">
+              <a href="#about" class="link">About</a>
+            </div>
+            <div class="svgNavItem">
+              <a href="#work" class="link">Work</a>
+            </div>
+            <div class="svgNavItem">
+              <a href="#contact" class="link">Contact</a>
+            </div>
+          </div> <!-- /.svgNav -->
+
+        </div> <!-- /.svgOverlay -->
+
       </div> <!-- /.wrapperIntro -->
     </section> <!-- /.sectionIntro -->
 
@@ -367,6 +419,18 @@
 
     <!-- loading js file -->
     <script src="js/main.js"></script>
+
+    <!-- google analytics -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-66706148-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
   </body>
 </html>
