Fixes to svg responsiveness & fadeIn effects

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="intro" class="sectionIntro">
       <div class="wrapperOuter wrapperIntro">
 
-        <!-- start of svg -->
+        <!-- start of large svg -->
         <svg version="1.1" id="svgIntroLg" class="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 1204 364" enable-background="new 0 0 1204 364" xml:space="preserve">
 
           <!-- zigzag path -->
@@ -98,16 +98,42 @@
           <text class="svgIntroText svgIntroText-nav svgIntroText-navWork" transform="matrix(1 0 0 1 803.9805 348)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#work">WORK</a></text>
           <text class="svgIntroText svgIntroText-nav svgIntroText-navContact" transform="matrix(1 0 0 1 1057.9688 347.999)" fill="#4C4C4C" font-family="'Montserrat-Regular'" font-size="2.4rem"><a class="linkX" xlink:href="#contact">CONTACT</a></text> -->
           
-        </svg> <!-- end of svg -->
+        </svg> 
+        <!-- end of large svg -->
+
+        <!-- start of medium svg -->
+        <svg version="1.1" id="svgIntroMed" class="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 830 260" enable-background="new 0 0 830 260" xml:space="preserve">
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M2.5,1.25h825L2.5,207.5 l206.25,50H2.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="827.5" y1="257.5" x2="827.5" y2="1.25"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="827.5" y1="257.5" x2="208.75" y2="257.5"/>
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M827.5,207.5H2.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="621.25" y1="257.5" x2="621.25" y2="207.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="415" y1="257.5" x2="415" y2="207.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="208.75" y1="257.5" x2="208.75" y2="207.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="2.5" y1="1.25" x2="2.5" y2="257.5"/>
+        </svg>
+        <!-- end of medium svg -->
+
+        <!-- start of small svg -->
+        <svg version="1.1" id="svgIntroSm" class="svgIntro" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" viewBox="0 0 454 310" enable-background="new 0 0 454 310" xml:space="preserve">
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M2.5,1.25h450L2.5,207.5 l225,50H2.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="452.5" y1="307.5" x2="452.5" y2="1.25"/>
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M452.5,207.5H2.5"/>
+        <path fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" d="M452.5,257.5h-225"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="452.5" y1="307.5" x2="2.5" y2="307.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="227.5" y1="307.5" x2="227.5" y2="207.5"/>
+        <line fill="none" stroke="#FF9163" stroke-width="2" stroke-linejoin="miter" stroke-miterlimit="10" vector-effect="non-scaling-stroke" x1="2.5" y1="1.25" x2="2.5" y2="307.5"/>
+        </svg>
+        <!-- end of small svg -->
 
         <div class="svgOverlay" style=" ">
 
           <div class="svgHeader" style=" ">
             <div class="svgHeaderText svgHeaderText-vesna">
-              <h1>Vesna</h1>
+              <h1>V<span class="esna">esna</span></h1>
             </div>
             <div class="svgHeaderText svgHeaderText-jocic">
-              <h1>Jocic</h1>
+              <h1>J<span class="ocic">ocic</span></h1>
             </div>
           </div> <!-- /.svgHeader -->
 
